[DATAPIPE-2382] Added GET route to get alias from namespace name
